# saml2oauth

./: .gitignore  README.md  build.sh  module.tf  pyproject.toml  requirements-dev.txt  variables.tf
.github/workflows/: ci.yml
src/: app.py  lambda_function.py  requirements.txt  shim_saml.py  shim_scim.py  shim_utils.py
tests/: __init__.py  conftest.py  test_app.py  test_lambda_handler.py  test_shim_saml.py  test_shim_scim.py  test_shim_utils.py
